добавлены страницы Президиума

--- a/mainapp/templates/mainapp/includes/modal-newDepartament.html
+++ b/mainapp/templates/mainapp/includes/modal-newDepartament.html
@@ -28,8 +28,12 @@
 						</small>
 					</div>
 					<div class="form-group">
-						<label for="" class="form-label-sm">ФИО контактного лица&nbsp;<span class="text-danger">*</span></label>
+						<label for="" class="form-label-sm">Руководитель РО <small class="text-muted">(ФИО контактного лица)</small>&nbsp;<span class="text-danger">*</span></label>
 						<input type="text" class="form-control form-control-sm" required>
+					</div>
+					<div class="form-group">
+						<label for="" class="form-label-sm">Адрес местонахождения</label>
+						<input type="text" class="form-control form-control-sm">
 					</div>
 					<div class="form-row">
 						<div class="form-group col-sm">
@@ -41,9 +45,13 @@
 							<input type="text" class="form-control form-control-sm">
 						</div>
 					</div>
+					<div class="form-group">
+						<label for="" class="form-label-sm">Краткая информация</label>
+						<textarea class="form-control form-control-sm" rows="3"></textarea>
+					</div>
 				</div>
 				<div class="modal-footer">
-					<button type="submit" class="btn btn-primary btn-sm">Отправить запрос</button>
+					<button type="submit" class="btn btn-primary btn-sm">Отправить</button>
 					<button type="button" class="btn btn-link btn-sm" data-dismiss="modal">Отмена</button>
 				</div>
 			</form>
