--- a/mainapp/templates/mainapp/includes/modal-newEmployee.html
+++ b/mainapp/templates/mainapp/includes/modal-newEmployee.html
@@ -25,7 +25,7 @@
 						  	<option>Краснодарский край</option>
 						</select>
 
-						<!-- Вариант 2: касается страниц без привязки к РО (пр. Главная и т.д.) - автоматический выбор <option selected>отделение...</option> и блокировкой поля select атрибутом disabled -->
+						<!-- Вариант 2: касается страниц без привязки к РО (пр. Главная, Президиум и т.д.) - автоматический выбор <option selected>отделение...</option> и блокировкой поля select атрибутом disabled -->
 						
 						<!-- <select class="form-control form-control-sm" required>
 							<option>-</option>
