--- a/mainapp/templates/mainapp/includes/modal-regConference.html
+++ b/mainapp/templates/mainapp/includes/modal-regConference.html
@@ -12,6 +12,32 @@
 			</div>
 			<form>
 				<div class="modal-body">
+					<div class="form-group">
+						<label for="" class="form-label-sm">Региональное отделение&nbsp;<span class="text-danger">*</span></label>
+						<!-- Вариант 1: касается ЛК РО (account_conf.html) - автоматический выбор <option selected>отделение...</option> и блокировкой поля select атрибутом disabled -->
+						
+						<!-- <select class="form-control form-control-sm" disabled required>
+							<option>-</option>
+						  	<option selected>Астраханская область</option>
+						  	<option>Тамбовская область</option>
+						  	<option>Воронежская область</option>
+						  	<option>Московская область</option>
+						  	<option>Хабаровский край</option>
+						  	<option>Краснодарский край</option>
+						</select> -->
+
+						<!-- Вариант 2: касается ЛК Президиума - атрибута disabled у поля <select> быть не должно -->
+						
+						<select class="form-control form-control-sm" required>
+							<option>-</option>
+						  	<option selected>Астраханская область</option>
+						  	<option>Тамбовская область</option>
+						  	<option>Воронежская область</option>
+						  	<option>Московская область</option>
+						  	<option>Хабаровский край</option>
+						  	<option>Краснодарский край</option>
+						</select>
+					</div>
 					<div class="form-row">
 						<div class="form-group col-sm-4">
 							<label for="" class="col-form-label col-form-label-sm">Дата проведения&nbsp;<span class="text-danger">*</span></label>
@@ -35,12 +61,8 @@
 						<label for="" class="form-label-sm">Тема конференции&nbsp;<span class="text-danger">*</span></label>
 						<input type="text" class="form-control form-control-sm" required>
 					</div>
-					<div class="form-group">
-						<label for="" class="form-label-sm">Повестка дня&nbsp;<span class="text-danger">*</span></label>
-						<textarea class="form-control form-control-sm" rows="3"></textarea>
-					</div>
 					<div class="alert alert-danger" role="alert">
-					  <strong>Внимание!!!</strong>&nbsp;В профиле конференции не забудьте зарегистрировать участников.
+					  <strong>Внимание!!!</strong>&nbsp;В профиле конференции не забудьте добавить повестку дня и зарегистрировать участников.
 					</div>
 				</div>
 				<div class="modal-footer">
