добавлена страница ЛК Президиума - Члены РСПС, сделан кривенький скрипт для статуса члена РСПС

--- a/mainapp/templates/mainapp/prezidium_conf.html
+++ b/mainapp/templates/mainapp/prezidium_conf.html
@@ -93,7 +93,7 @@
 						<td>
 							<div class="text-appercase">Конференция по Московской области 2019</div>
 							<div>Колличество участников:&nbsp;<strong>5</strong></div>
-							<div class="text-danger mt-2">Зарегистрирована</div>
+							<div class="text-danger mt-2">Запланирована</div>
 						</td>
 						<td>
 							<a href="#" class="btn-action mr-3 text-primary" title="Удалить конференцию"><i class="fa fa-trash-o"></i></a>
