--- a/mainapp/templates/mainapp/account_employee.html
+++ b/mainapp/templates/mainapp/account_employee.html
@@ -162,7 +162,7 @@
 									</div>
 
 									<h6 class='text-primary mb-3'>Статус членства в РСПС</h6>
-
+									<p class="text-muted">Чтобы заявить кандидата на членство в РСПС достаточно сохранить внесенные сведения, в противном случае запись можно удалить.</p>
 									<div class="progress mb-5">
 										<div class="progress-bar bg-default text-secondary w-40" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">Заявлен</div>
 										<div class="progress-bar bg-default text-secondary w-35" role="progressbar" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100">Одобрен РСПС</div>
