добавлена страница создания съезда РСПС

--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -43,6 +43,7 @@
 	{% include 'mainapp/includes/modal-newEmployee.html' %}
 	{% include 'mainapp/includes/modal-regCongress.html' %}
 	{% include 'mainapp/includes/modal-newDepartament.html' %}
+	{% include 'mainapp/includes/modal-newCongress.html' %}
 
 	<!-- Optional JavaScript -->
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
