--- a/mainapp/templates/mainapp/prezidium_employee.html
+++ b/mainapp/templates/mainapp/prezidium_employee.html
@@ -7,8 +7,7 @@
 		<nav aria-label="breadcrumb">
 			<ol class="breadcrumb">
 				<li class="breadcrumb-item"><a href="{% url 'index' %}">Главная</a></li>
-				<li class="breadcrumb-item"><a href="{% url 'prezidium_regional_office' %}">Президиум</a></li>
-				<li class="breadcrumb-item active" aria-current="page">Члены РСПС</li>
+				<li class="breadcrumb-item active" aria-current="page">Личный кабинет президиума</li>
 			</ol>
 		</nav>
 
@@ -350,8 +349,8 @@
 									</div>
 								</div>
 								<div class="progress mb-5">
-									<div id="progressStatusOne" class="progress-bar progress-bar-striped bg-info w-40" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">Заявлен</div>
-									<div id="progressStatusTwo" class="progress-bar progress-bar-striped bg-success w-35" role="progressbar" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100">Одобрен РСПС</div>
+									<div id="progressStatusOne" class="st1 progress-bar progress-bar-striped bg-info w-40" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">Заявлен</div>
+									<div id="progressStatusTwo" class="st2 progress-bar progress-bar-striped bg-success w-35" role="progressbar" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100">Одобрен РСПС</div>
 									<div id="progressStatusThree" class="progress-bar progress-bar-striped bg-warning w-25" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Сертификат РСПС</div>
 								</div>
 
