--- a/mainapp/templates/mainapp/prezidium_regional_office.html
+++ b/mainapp/templates/mainapp/prezidium_regional_office.html
@@ -7,8 +7,7 @@
 		<nav aria-label="breadcrumb">
 			<ol class="breadcrumb">
 				<li class="breadcrumb-item"><a href="{% url 'index' %}">Главная</a></li>
-				<li class="breadcrumb-item"><a href="{% url 'prezidium_regional_office' %}">Президиум</a></li>
-				<li class="breadcrumb-item active" aria-current="page">Региональные отделения</li>
+				<li class="breadcrumb-item active" aria-current="page">Личный кабинет президиума</li>
 			</ol>
 		</nav>
 
