--- a/mainapp/templates/mainapp/account_conf.html
+++ b/mainapp/templates/mainapp/account_conf.html
@@ -137,7 +137,7 @@
 
 								<button type="button" class="btn btn-outline-danger btn-xs mb-3" data-toggle="modal" data-target="#participantConfModal">Зарегистрировать</button>
 
-								<div class="table-responsive">
+								<div class="table-responsive table-scroll">
 									<table class="table table-list table-internal-list">
 										<thead>
 											<tr class="active">
@@ -262,7 +262,7 @@
 
 								<h6 class='text-primary mb-4'>Участники конференции</h6>
 
-								<div class="table-responsive">
+								<div class="table-responsive table-scroll">
 									<table class="table table-list table-internal-list">
 										<thead>
 											<tr class="active">
