--- a/mainapp/templates/mainapp/includes/modal-regCongress.html
+++ b/mainapp/templates/mainapp/includes/modal-regCongress.html
@@ -14,8 +14,34 @@
 					<div class="alert alert-danger" role="alert">
 						<strong>Внимание!!!</strong>&nbsp;Для регистрации на съезд РСПС человека, отсутствующего в списке, необходимо вначале заявить его в члены РСПС.
 					</div>
+					<div class="form-group">
+						<label for="" class="form-label-sm">Региональное отделение&nbsp;<span class="text-danger">*</span></label>
+						<!-- Вариант 1: касается ЛК РО (account_conf.html) - автоматический выбор <option selected>отделение...</option> и блокировкой поля select атрибутом disabled -->
+						
+						<!-- <select class="form-control form-control-sm" disabled required>
+							<option>-</option>
+						  	<option selected>Астраханская область</option>
+						  	<option>Тамбовская область</option>
+						  	<option>Воронежская область</option>
+						  	<option>Московская область</option>
+						  	<option>Хабаровский край</option>
+						  	<option>Краснодарский край</option>
+						</select> -->
 
-					<table class="table table-striped table-hover">
+						<!-- Вариант 2: касается ЛК Президиума - атрибута disabled у поля <select> быть не должно -->
+						
+						<select class="form-control form-control-sm" required>
+							<option>-</option>
+						  	<option selected>Астраханская область</option>
+						  	<option>Тамбовская область</option>
+						  	<option>Воронежская область</option>
+						  	<option>Московская область</option>
+						  	<option>Хабаровский край</option>
+						  	<option>Краснодарский край</option>
+						</select>
+					</div>
+					<div class="table-scroll">
+						<table class="table table-sm table-striped table-hover">
 						<tbody>
 							<tr>
 								<th scope="row" colspan="2">
@@ -54,6 +80,8 @@
 							</tr>
 						</tbody>
 					</table>
+					</div>
+					
 				</div>
 
 				<div class="modal-footer">
