--- a/mainapp/templates/mainapp/prezidium_conf.html
+++ b/mainapp/templates/mainapp/prezidium_conf.html
@@ -7,8 +7,7 @@
 		<nav aria-label="breadcrumb">
 			<ol class="breadcrumb">
 				<li class="breadcrumb-item"><a href="{% url 'index' %}">Главная</a></li>
-				<li class="breadcrumb-item"><a href="{% url 'prezidium_regional_office' %}">Президиум</a></li>
-				<li class="breadcrumb-item active" aria-current="page">Конференции</li>
+				<li class="breadcrumb-item active" aria-current="page">Личный кабинет президиума</li>
 			</ol>
 		</nav>
 
@@ -177,7 +176,7 @@
 
 								<button type="button" class="btn btn-outline-danger btn-xs mb-3" data-toggle="modal" data-target="#participantConfModal">Зарегистрировать</button>
 
-								<div class="table-responsive">
+								<div class="table-responsive table-scroll">
 									<table class="table table-list table-internal-list">
 										<thead>
 											<tr class="active">
@@ -296,7 +295,7 @@
 
 								<h6 class='text-primary mb-4'>Участники конференции</h6>
 
-								<div class="table-responsive">
+								<div class="table-responsive table-scroll">
 									<table class="table table-list table-internal-list">
 										<thead>
 											<tr class="active">
