--- a/mainapp/templates/mainapp/prezidium_congress.html
+++ b/mainapp/templates/mainapp/prezidium_congress.html
@@ -7,8 +7,7 @@
 		<nav aria-label="breadcrumb">
 			<ol class="breadcrumb">
 				<li class="breadcrumb-item"><a href="{% url 'index' %}">Главная</a></li>
-				<li class="breadcrumb-item"><a href="{% url 'account_about' %}">Личный кабинет президиума</a></li>
-				<li class="breadcrumb-item active" aria-current="page">Конференции</li>
+				<li class="breadcrumb-item active" aria-current="page">Личный кабинет президиума</li>
 			</ol>
 		</nav>
 
@@ -29,283 +28,183 @@
 			</li>
 		</ul>
 		
-		<button type="button" class="btn btn-danger btn-xl mb-4" data-toggle='modal' data-target='#modal-regConference'>Добавить конференцию</button>
+		<button type="button" class="btn btn-danger btn-xl mb-4" data-toggle='modal' data-target='#modal-newCongress'>Новый съезд РСПС</button>
 		
 		<div class="table-responsive">
 			<table class="table table-list">
 				<thead>
 					<tr class="active">
+						<th>Рабочее название</th>
 						<th>Дата проведения</th>
 						<th>Место проведения</th>
-						<th>Название конференции</th>
+						<th>Зарегистрировано участников</th>
 						<th>Действия</th>
 					</tr>
 				</thead>
 				<tbody>
-					{% for conference in conferences %}
-					{% if not conference.completed %}
 					<tr>
-						<td>{{ conference.date }}</td>
-						<td>{{ conference.place }}</td>
 						<td>
-							<div class="text-appercase">{{ conference.title }}</div>
-							<div>Колличество участников:&nbsp;<strong>{{ conference.members.all|length }}</strong></div>
-							<div class="text-danger mt-2">Зарегистрируйте участников</div>
+							<div class="text-uppercase font-weight-bold text-primary">Съезд РСПС 2019</div>
+							<div class="text-danger mt-2">Запланировано</div>
 						</td>
+						<td>01 июля 2019 г.</td>
+						<td>Москва, ул. Братиславская, дом 6, офис НАКС</td>
+						<td class="font-weight-bold">24</td>
 						<td>
-							<a href="#" class="btn-action mr-3 text-primary" title="Удалить конференцию"><i class="fa fa-trash-o"></i></a>
-							<a href="#multiCollapseConf{{conference.pk}}" class="btn-action text-primary" data-toggle="collapse" aria-expanded="false" title="Изменить"><i class="fa fa-pencil"></i></a>
+							<a href="#" class="btn-action mr-3 text-primary" title="Удалить съезд"><i class="fa fa-trash-o"></i></a>
+							<a href="#multiCollapseConf00" class="btn-action text-primary" data-toggle="collapse" aria-expanded="false" title="Изменить"><i class="fa fa-pencil"></i></a>
 						</td>
 					</tr>
-					<tr class="multi-collapse collapse edit-list" id="multiCollapseConf{{conference.pk}}">
-						<td colspan="4" class="total-column">
+					<tr class="multi-collapse collapse edit-list" id="multiCollapseConf00">
+						<td colspan="5" class="total-column">
 							<form>
-								<div class="mb-5">
-									<h6 class='text-primary mb-4'>Сведения о конференции</h6>
-									<div class="form-group row">
-										<label for="" class="col-sm-4 col-form-label col-form-label-sm">Дата проведения&nbsp;<span class="text-danger">*</span></label>
-										<div class="col-6 col-sm-4 col-lg-3">
-											<div class="input-group input-group-sm">
-												<input type="text" class="form-control datepicker-here" placeholder="дд.мм.гггг" aria-label="дд.мм.гггг" aria-describedby="">
-												<div class="input-group-append">
-													<span class="input-group-text"><i class="fa fa-calendar"></i></span>
-												</div>
-											</div>
-										</div>
-									</div>
-									<div class="form-group row">
-										<label for="" class="col-sm-4 col-form-label col-form-label-sm">Место проведения&nbsp;<span class="text-danger">*</span></label>
-										<div class="col-sm-8 col-lg-6">
-											<input type="text" class="form-control form-control-sm" placeholder="" value="236005, г. Обнинск, ул. Колхозная, д. 118A">
-										</div>
-									</div>
-									<div class="form-group row">
-										<label for="" class="col-sm-4 col-form-label col-form-label-sm">Название конференции&nbsp;<span class="text-danger">*</span></label>
-										<div class="col-sm-8 col-lg-6">
-											<input type="text" class="form-control form-control-sm" placeholder="" value="Конференция РСПС по Калужской области 2019">
-										</div>
-									</div>
-									<div class="form-group row">
-										<label for="" class="col-sm-4 col-form-label col-form-label-sm">Тема конференции&nbsp;<span class="text-danger">*</span></label>
-										<div class="col-sm-8 col-lg-6">
-											<input type="text" class="form-control form-control-sm" placeholder="" value="Развитие сварочного сообщества">
-										</div>
-									</div>
-
-									<div class="form-group row align-items-center">
-										<label for="" class="col-sm-4 col-form-label col-form-label-sm">Повестка дня&nbsp;<span class="text-danger">*</span></label>
-										<div class="col-sm-8 col-lg-6">
-											<div class="input-group input-group-sm">
-												<div class="input-group-prepend">
-													<span class="input-group-text" id="countQuest01"><strong>1</strong></span>
-												</div>
-												<input type="text" class="form-control" placeholder="Введите вопрос повестки дня">
-												<div class="input-group-append">
-													<button class="btn btn-outline-danger" type="button" id="button-addon1" title="Удалить вопрос"><i class="fa fa-times"></i></button>
-												</div>
-											</div>
-										</div>
-									</div>
-									<div id="add_field_area">
-										<div class="form-group row align-items-center" id="add">
-											<div class="col-sm-8 col-lg-6 offset-sm-4">
-												<div class="input-group input-group-sm">
-													<div class="input-group-prepend">
-														<span class="input-group-text" id="countQuest02"><strong>2</strong></span>
-													</div>
-													<input type="text" class="form-control" placeholder="Введите вопрос повестки дня">
-													<div class="input-group-append">
-														<button class="btn btn-outline-danger" type="button" id="button-addon2" title="Удалить вопрос"><i class="fa fa-times"></i></button>
-													</div>
-												</div>
-											</div>
-										</div>
-									</div>
-									
-									<div class="form-group row">
-										<label for="" class="sr-only">Добавить вопрос</label>
-										<div class="col-sm-6 offset-sm-4">
-											<button class="btn btn-outline-secondary btn-xs"><i class="fa fa-plus mr-2"></i>Добавить вопрос</button>
-										</div>
-									</div>
+								<div class="mb-4">
+									<h6 class='text-primary mb-4'>Сведения о съезде</h6>
+									{% include 'mainapp/includes/form-prezidium_congress.html' %}
 								</div>
-
-								<h6 class='text-primary mb-4'>Участники конференции</h6>
-
-								<button type="button" class="btn btn-outline-danger btn-xs mb-3" data-toggle="modal" data-target="#participantConfModal">Зарегистрировать</button>
-
-								<div class="table-responsive">
-									<table class="table table-list table-internal-list">
-										<thead>
-											<tr class="active">
-												<th>ФИО</th>
-												<th>Место работы / должность</th>
-												<th>Телефон / Email</th>
-												<th>Членство РСПС</th>
-												<th>Действия</th>
-											</tr>
-										</thead>
-										<tbody>
-											{% for member in conference.members.all %}
-											<tr>
-												<td>{{member.fio}}</td>
-												<td>{{member.job}}, {{member.jobplace}}</td>
-												<td>{{member.tel}}, {{member.email}}</td>
-												<td>
-													{% if member.membership %}
-													да
-													{% else %}
-													нет
-													{% endif %}
-												</td>
-												<td>
-													<div>
+								
+								<div class="mb-4">
+									<h6 class='text-primary mb-4'>Участники съезда</h6>
+									<div class="form-row align-items-center mb-3">
+										<div class="col-auto">
+											<button type="button" class="btn btn-outline-danger btn-xs" data-toggle="modal" data-target="#modal-regCongress">Зарегистрировать</button>
+										</div>
+										<div class="col-auto">
+											<div class="form-check">
+												<input class="form-check-input" type="checkbox" id="gridCheck1">
+												<label class="form-check-label" for="gridCheck1">
+													Уведомить участников
+												</label>
+											</div>
+										</div>
+									</div>
+									<div class="table-responsive table-scroll">
+										<table class="table table-list table-internal-list">
+											<thead>
+												<tr class="active">
+													<th>Региональное отделение</th>
+													<th>Руководитель отделения</th>
+													<th>Телефон / Email</th>
+													<th>Зарегистрировано</th>
+													<th>Действия</th>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td class="font-weight-bold">Московская область</td>
+													<td>Бродягин Владимир Николаевич</td>
+													<td>(910) 435-52-00 (495) 369-64-70, ac-mosgaz@yandex.ru</td>
+													<td class="font-weight-bold">20</td>
+													<td>
 														<a href="#" class="btn-action mr-3 text-primary" title="Удалить участника"><i class="fa fa-trash-o"></i></a>
-														<a href="#" class="btn-action text-primary" data-toggle="modal" data-target="#participantConfModal" title="Изменить"><i class="fa fa-pencil"></i></a>
-													</div>
-												</td>
-											</tr>
-											{% endfor %}
-											
-										</tbody>
-									</table>
+														<a href="#" class="btn-action text-primary" data-toggle="modal" data-target="#modal-regCongress" title="Изменить"><i class="fa fa-pencil"></i></a>
+													</td>
+												</tr>
+												<tr>
+													<td class="font-weight-bold">Астраханская область</td>
+													<td>Меркулов Денис Иювинальевич</td>
+													<td>(8512) 549097 (8512) 485393, svarkacenter@ya.ru</td>
+													<td class="font-weight-bold">4</td>
+													<td>
+														<a href="#" class="btn-action mr-3 text-primary" title="Удалить участника"><i class="fa fa-trash-o"></i></a>
+														<a href="#" class="btn-action text-primary" data-toggle="modal" data-target="#modal-regCongress" title="Изменить"><i class="fa fa-pencil"></i></a>
+													</td>
+												</tr>
+											</tbody>
+										</table>
+									</div>
 								</div>
-
+								
 								<div class="form-group">
 									<div class="form-check">
 										<input class="form-check-input" type="checkbox" id="gridCheck1">
 										<label class="form-check-label text-success" for="gridCheck1">
-											<strong>Конференция проведена</strong>
+											<strong>Съезд проведен</strong>
 										</label>
 									</div>
 								</div>
 								<button type="submit" class="btn btn-primary btn-xs">Сохранить</button>
-								<a href="#multiCollapseConf{{conference.pk}}" class="btn btn-outline-primary btn-xs" data-toggle="collapse" aria-expanded="false" role="button">Закрыть</a>
+								<a href="#multiCollapseConf00" class="btn btn-outline-primary btn-xs" data-toggle="collapse" aria-expanded="false" role="button">Закрыть</a>
 							</form>
 						</td>
 					</tr>
-					{% else %}
+
 					<tr>
-						<td>{{ conference.date }}</td>
-						<td>{{ conference.place }}</td>
 						<td>
-							<div class="text-appercase">{{ conference.title }}</div>
-							<div>Колличество участников:&nbsp;<strong>11</strong></div>
-							<div class="text-success mt-2">Проведена</div>
+							<div class="text-uppercase font-weight-bold text-primary">Съезд РСПС 2018</div>
+							<div class="text-success mt-2">Проведен</div>
 						</td>
+						<td>01 июля 2018 г.</td>
+						<td>Москва, ул. Братиславская, дом 6, офис НАКС</td>
+						<td class="font-weight-bold">24</td>
 						<td>
-							<a href="#" class="btn-action mr-3 text-primary" title="Копировать"><i class="fa fa-clone"></i></a>
-							<a href="#multiCollapseConf{{conference.pk}}" class="btn-action text-primary" data-toggle="collapse" aria-expanded="false" title="Просмотр"><i class="fa fa-eye"></i></a>
+							<a href="#" class="btn-action mr-3 text-primary" title="Удалить съезд"><i class="fa fa-trash-o"></i></a>
+							<a href="#multiCollapseConf01" class="btn-action text-primary" data-toggle="collapse" aria-expanded="false" title="Просмотр"><i class="fa fa-eye"></i></a>
 						</td>
 					</tr>
-					<tr class="multi-collapse collapse edit-list" id="multiCollapseConf{{conference.pk}}">
-						<td colspan="4" class="total-column">
+					<tr class="multi-collapse collapse edit-list" id="multiCollapseConf01">
+						<td colspan="5" class="total-column">
 							<form>
 								<div class="mb-4">
-									<h6 class='text-primary mb-4'>Сведения о конференции</h6>
-									<div class="form-group row">
-										<label for="" class="col-sm-4 col-form-label col-form-label-sm">Дата проведения&nbsp;<span class="text-danger">*</span></label>
-										<div class="col-6 col-sm-4 col-lg-3">
-											<div class="input-group input-group-sm">
-												<input type="text" class="form-control datepicker-here" placeholder="дд.мм.гггг" aria-label="дд.мм.гггг" aria-describedby="" value="15.10.2018" disabled>
-												<div class="input-group-append">
-													<span class="input-group-text"><i class="fa fa-calendar"></i></span>
-												</div>
+									<h6 class='text-primary mb-4'>Сведения о съезде</h6>
+									{% include 'mainapp/includes/form-prezidium_congress.html' %}
+								</div>
+								
+								<div class="mb-4">
+									<h6 class='text-primary mb-4'>Участники съезда</h6>
+									<div class="form-row align-items-center mb-3">
+										<div class="col-auto">
+											<div class="form-check">
+												<input class="form-check-input" type="checkbox" id="gridCheck1" checked>
+												<label class="form-check-label" for="gridCheck1">
+													Уведомить участников
+												</label>
 											</div>
 										</div>
 									</div>
-									<div class="form-group row">
-										<label for="" class="col-sm-4 col-form-label col-form-label-sm">Место проведения&nbsp;<span class="text-danger">*</span></label>
-										<div class="col-sm-8 col-lg-6">
-											<input type="text" class="form-control form-control-sm" placeholder="" value="236005, г. Обнинск, ул. Колхозная, д. 118A" disabled>
-										</div>
-									</div>
-									<div class="form-group row">
-										<label for="" class="col-sm-4 col-form-label col-form-label-sm">Название конференции&nbsp;<span class="text-danger">*</span></label>
-										<div class="col-sm-8 col-lg-6">
-											<input type="text" class="form-control form-control-sm" placeholder="" value="Конференция РСПС по Калужской области 2019" disabled>
-										</div>
-									</div>
-									<div class="form-group row">
-										<label for="" class="col-sm-4 col-form-label col-form-label-sm">Тема конференции&nbsp;<span class="text-danger">*</span></label>
-										<div class="col-sm-8 col-lg-6">
-											<input type="text" class="form-control form-control-sm" placeholder="" value="Развитие сварочного сообщества" disabled>
-										</div>
-									</div>
-									<div class="form-group row align-items-center">
-										<label for="" class="col-sm-4 col-form-label col-form-label-sm">Повестка дня&nbsp;<span class="text-danger">*</span></label>
-										<div class="col-sm-8 col-lg-6">
-											<div class="input-group input-group-sm">
-												<div class="input-group-prepend">
-													<span class="input-group-text" id="countQuest01"><strong>1</strong></span>
-												</div>
-												<input type="text" class="form-control" value="Вопрос повестки дня" disabled>
-											</div>
-										</div>
-									</div>
-									<div id="add_field_area">
-										<div class="form-group row align-items-center" id="add">
-											<div class="col-sm-8 col-lg-6 offset-sm-4">
-												<div class="input-group input-group-sm">
-													<div class="input-group-prepend">
-														<span class="input-group-text" id="countQuest02"><strong>2</strong></span>
-													</div>
-													<input type="text" class="form-control" value="Вопрос повестки дня" disabled>
-												</div>
-											</div>
-										</div>
+									<div class="table-responsive table-scroll">
+										<table class="table table-list table-internal-list">
+											<thead>
+												<tr class="active">
+													<th>Региональное отделение</th>
+													<th>Руководитель отделения</th>
+													<th>Телефон / Email</th>
+													<th>Зарегистрировано</th>
+													<th>Действия</th>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td class="font-weight-bold">Московская область</td>
+													<td>Бродягин Владимир Николаевич</td>
+													<td>(910) 435-52-00 (495) 369-64-70, ac-mosgaz@yandex.ru</td>
+													<td class="font-weight-bold">20</td>
+													<td>-</td>
+												</tr>
+												<tr>
+													<td class="font-weight-bold">Астраханская область</td>
+													<td>Меркулов Денис Иювинальевич</td>
+													<td>(8512) 549097 (8512) 485393, svarkacenter@ya.ru</td>
+													<td class="font-weight-bold">4</td>
+													<td>-</td>
+												</tr>
+											</tbody>
+										</table>
 									</div>
 								</div>
-
-								<h6 class='text-primary mb-4'>Участники конференции</h6>
-
-								<div class="table-responsive">
-									<table class="table table-list table-internal-list">
-										<thead>
-											<tr class="active">
-												<th>ФИО</th>
-												<th>Место работы / должность</th>
-												<th>Телефон / Email</th>
-												<th>Членство РСПС</th>
-												<th>Действия</th>
-											</tr>
-										</thead>
-										<tbody>
-											{% for member in conference.members.all %}
-											<tr>
-												<td>{{member.fio}}</td>
-												<td>{{member.job}}, {{member.jobplace}}</td>
-												<td>{{member.tel}}, {{member.email}}</td>
-												<td>
-													{% if member.membership %}
-													да
-													{% else %}
-													нет
-													{% endif %}
-												</td>
-												<td></td>  
-											</tr>
-											{% endfor %}
-										</tbody>
-									</table>
-								</div>
-
+								
 								<div class="form-group">
 									<div class="form-check">
-										<input class="form-check-input" type="checkbox" id="gridCheck2" checked disabled>
-										<label class="form-check-label" for="gridCheck2">
-											Конференция проведена
+										<input class="form-check-input" type="checkbox" id="gridCheck1" checked>
+										<label class="form-check-label text-success" for="gridCheck1">
+											<strong>Съезд проведен</strong>
 										</label>
 									</div>
 								</div>
-
-								<a href="#multiCollapseConf{{conference.pk}}" class="btn btn-outline-primary btn-xs" data-toggle="collapse" aria-expanded="false" aria-controls="multiCollapseConf02" role="button">Закрыть</a>
+								<a href="#multiCollapseConf00" class="btn btn-outline-primary btn-xs" data-toggle="collapse" aria-expanded="false" role="button">Закрыть</a>
 							</form>
 						</td>
 					</tr>
-					{% endif %}
-					{% endfor %}
-
 				</tbody>
 			</table>
 		</div>
