--- a/static/css/style.css
+++ b/static/css/style.css
@@ -26,6 +26,9 @@
   .breadcrumb a {
     color: #086da3 !important; }
 
+.table-sm {
+  font-size: 0.8rem; }
+
 .form-check-input {
   margin-top: 0.2rem; }
 
@@ -290,38 +293,14 @@ main {
   main .card-all .card-top {
     width: 100%;
     height: 200px;
-    overflow: hidden;
-    /* position: relative;
-			  width: 100%;
-			  height: 200px;
-			  overflow: hidden; */
-    /* height: 200px;
-			overflow: hidden;       
-		    display: table-cell;
-		    text-align: center;
-		    vertical-align: middle; */ }
+    overflow: hidden; }
     main .card-all .card-top img {
       height: 100%;
       min-width: 100%;
       left: 50%;
       position: relative;
       -webkit-transform: translateX(-50%);
-      transform: translateX(-50%);
-      /* position: absolute;
-				  left: 50%;
-				  top: 50%;
-				  height: 100%;
-				  width: auto;
-				  -webkit-transform: translate(-50%,-50%);
-				      -ms-transform: translate(-50%,-50%);
-				          transform: translate(-50%,-50%); */
-      /* max-width: 100%;
-    			display: inline-block; */
-      /* height: 100%;
-			    width: auto;
-			    margin-left: auto;
-			    margin-right: auto;
-			    display: block; */ }
+      transform: translateX(-50%); }
     main .card-all .card-top .card-img-overlay {
       position: absolute;
       top: 0;
@@ -467,11 +446,14 @@ main {
       text-transform: uppercase;
       background-color: #e1ecf2; }
 
-/* Calendar */
 .datepicker {
-  z-index: 10000; }
+  z-index: 10000;
+  /* Calendar */ }
 
 .popover {
-  /* padding: .5rem .75rem; */
   color: #6c757d !important;
   font-size: 0.75rem; }
+
+.table-scroll {
+  overflow-y: auto;
+  max-height: 300px; }
