--- a/members/templates/members/includes/member_lst_row.html
+++ b/members/templates/members/includes/member_lst_row.html
@@ -10,7 +10,7 @@
         <div>{{ member.tel }}</div>
     </td>
     <td>
-        <div class="status-false mb-1"><i class="fa fa-arrow-down mr-2"></i><small>Новый</small></div>
+        <div class="status-false mb-1"><i class="fa fa-arrow-down mr-2"></i><small>{{ member.status }}</small></div>
     </td>
     <td>
         <a href="#" class="btn-action mr-3 text-primary" title="Удалить"><i class="fa fa-trash-o"></i></a>
