--- a/members/templates/members/lk_member_list.html
+++ b/members/templates/members/lk_member_list.html
@@ -71,7 +71,7 @@
 			</form>
 		</div>
 
-		<button type="button" class="btn btn-danger btn-xl mb-4" data-toggle='modal' data-target='#modal-newEmployee'>Добавить члена РСПС</button>
+		<button type="button" class="btn btn-danger btn-xl mb-4" data-toggle='modal' data-target='#id_add_new_member_modal'>Добавить члена РСПС</button>
 
 		<button type="button" class="btn btn-outline-danger btn-sm mb-4 d-block mx-auto" data-toggle='modal' data-target='#modal-regCongress'>Регистрация на Съезд РСПС 2019</button>
 
@@ -118,5 +118,7 @@
 	</div>
 
 </main>
+
+{% include 'members/includes/new_member_form.html'%}
 <!-- End Content -->
 {% endblock %}
