--- a/members/templates/members/includes/member_edit_form.html
+++ b/members/templates/members/includes/member_edit_form.html
@@ -1,3 +1,4 @@
+{% load formstyles %}
 <form>
     <div class="mb-4">
         <h6 class='text-primary mb-4'>Сведения о члене РСПС</h6>
@@ -58,8 +59,8 @@
 
     <div class="form-group">
         <div class="form-check">
-            <input class="form-check-input" type="checkbox" id="gridCheck0">
-            <label class="form-check-label text-success text-uppercase" for="gridCheck0">
+            <input class="form-check-input" type="checkbox" id="gridCheck{{ member.pk }}">
+            <label class="form-check-label text-success text-uppercase" for="gridCheck{{ member.pk }}">
                 <strong>Зарегистрировать на Съезд РСПС 2019</strong>
             </label>
         </div>
@@ -72,8 +73,8 @@
         </div>
         <div class="col-auto my-1">
             <div class="form-check">
-                <input class="form-check-input" type="checkbox" id="mailingCheck0">
-                <label class="form-check-label" for="mailingCheck0">
+                <input class="form-check-input" type="checkbox" id="mailingCheck{{ member.pk }}">
+                <label class="form-check-label" for="mailingCheck{{ member.pk }}">
                     подписка на рассылку от РСПС
                 </label>
             </div>
