--- a/members/templates/members/includes/new_member_form.html
+++ b/members/templates/members/includes/new_member_form.html
@@ -11,6 +11,7 @@
 				</button>
 			</div>
 			<form method="post" id="add_new_member_form">
+				{% csrf_token %}
 				<div class="modal-body">
 					<div class="form-group">
 						<label for="" class="form-label-sm">Региональное отделение&nbsp;<span class="text-danger">*</span></label>
@@ -74,18 +75,18 @@
 					</div>
 					<div class="form-group">
 						<div class="form-check">
-							<input class="form-check-input" type="checkbox" id="gridCheck">
-							<label class="form-check-label" for="gridCheck">
+							<input class="form-check-input" type="checkbox" id="subscribe{{member.pk}}">
+							<label class="form-check-label" for="subscribe{{member.pk}}">
 								подписка на рассылку от РСПС
 							</label>
 						</div>
 					</div>
 				</div>
 				{% comment %} {{ add_new_member_form.errors }} {% endcomment %}
-				<div id="results"></div>
+				<div id="results" class="px-3"></div>
 				<div class="modal-footer">
 					<button id="post-form" type="submit" class="btn btn-primary btn-sm">Сохранить</button>
-					<button type="button" class="btn btn-link btn-sm" data-dismiss="modal">Отмена</button>
+					<button id="dismiss-link" type="button" class="btn btn-link btn-sm" data-dismiss="modal">Отмена</button>
 				</div>
 			</form>
 		</div>
