--- a/members/templates/members/includes/member_lst_row.html
+++ b/members/templates/members/includes/member_lst_row.html
@@ -14,8 +14,11 @@
     </td>
     <td>
         <a href="#" class="btn-action mr-3 text-primary" title="Удалить"><i class="fa fa-trash-o"></i></a>
-        <a href="#multiCollapseEmpl{{ member.pk }}" class="btn-action text-primary" data-toggle="collapse" aria-expanded="false"
-            title="Изменить"><i class="fa fa-pencil"></i></a>
+        {% comment %} <a href="#multiCollapseEmpl{{ member.pk }}" class="btn-action text-primary" 
+            data-collapsetarget="multiCollapseEmpl{{ member.pk }}" data-toggle="collapse" aria-expanded="false"
+            title="Изменить"><i class="fa fa-pencil"></i></a> {% endcomment %}
+        <a href="#multiCollapseEmpl{{ member.pk }}" class="pencil btn-action text-primary"
+            aria-expanded="false" title="Изменить"><i class="fa fa-pencil"></i></a>
     </td>
 </tr>
 <tr class="multi-collapse collapse edit-list" id="multiCollapseEmpl{{ member.pk }}">
